# d-chat

./: .gitignore  Dockerfile  LICENSE  README.md  TODO  bot.py  config.py  data_loader.py  docker-compose.yml  example.env  inference.py  ingest.py  main.py  operations.py  playground.ipynb  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
app/: config.py  context_builder.py  custom_llm.py  inference.py  ingest.py  llm.py  main.py  new.py
fine-tune/: fine-tune.py
fine-tune/training-data/: domain_data.csv
templates/: chat.html  footer.html  header.html  index.html
tests/: bot_test.py
web/static/: styles.css
web/templates/: chat.html  footer.html  header.html  index.html
