[tool.poetry]
package-mode = false
name = "d-chat"
version = "0.1.0"
description = "chat with your private data"
authors = ["raushan k <raushan.br.in@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
langchain = "^0.3.11"
pylint = "^3.3.2"
langchain-community = "^0.3.11"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.9.0.post1"
jinja2 = "^3.1.4"
python-multipart = "^0.0.19"
uvicorn = "^0.33.0"
pdfplumber = "^0.11.4"
torch = "2.2.2"
sentence-transformers = "^3.3.1"
langchain-huggingface = "^0.1.2"
numpy = "<2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
